<resources>
    <string name="app_name">Omeal App Project</string>
    <string name="ImageView">Logo</string>
    <string name="LoginTextView">Login</string>
    <string name="RegisterTextView">Register</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="loginButton">Sign In</string>
    <string name="registerButton">Sign Up</string>
    <string name="RegTextView1">Not Registered?</string>
    <string name="RegTextView2">Sign Up Here</string>
    <string name="LogTextView1">Registered?</string>
    <string name="LogTextView2">Sign In Here</string>
    <string name="RestaurantView1">Restaurant Image</string>
    <string name="RestaurantView2">Restaurant Name</string>
    <string name="RestaurantView3">Restaurant Address</string>
    <string name="MenuView1">Menu Dish</string>
    <string name="MenuView2">Menu Price</string>
    <string name="MenuView3">+</string>
    <string name="MenuView4">-</string>
    <string name="MenuView5">Keep Browsing</string>
    <string name="MenuView6">View Cart</string>
    <string name="CartP1">Your Cart</string>
    <string name="CartP2">Cart Total</string>
    <string name="CartP3">Tax</string>
    <string name="CartP4">Total</string>
    <string name="CartP5">Edit Profile</string>
    <string name="CartP6">Proceed to Checkout</string>
    <string name="Checkout1">Checkout</string>
    <string name="Checkout2">Pay Price</string>
    <string name="Checkouthint1">1234 1234 1234 1234</string>
    <string name="Checkouthint2">MM/YY</string>
    <string name="Checkouthint3">CVC</string>
    <string name="Checkouthint4">John Doe</string>
    <string name="Checkouthint5">Country</string>
    <string name="Checkouthint6">Address Line 1</string>
    <string name="Checkouthint7">City</string>
    <string name="Checkouthint8">ZIP</string>
    <string name="Checkouthint9">Province</string>
    <string name="Profile1">Profile</string>
    <string name="Profile2">Update</string>
    <string name="Profile3">Cart</string>
</resources>