<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/Checkout1"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold">
        </TextView>

        <ImageView
            android:id="@+id/imageView01"
            android:layout_width="355dp"
            android:layout_height="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/RestaurantView1"
            android:scaleType="centerCrop"
            android:src="@drawable/divider"
            tools:ignore="ImageContrastCheck">
        </ImageView>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="95dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextCNUM"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="175dp"
            android:ems="10"
            android:hint="@string/Checkouthint1"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="230dp"
            android:ems="10"
            android:hint="@string/Checkouthint2"
            android:inputType="date"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextINUM"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="205dp"
            android:layout_marginTop="230dp"
            android:ems="10"
            android:hint="@string/Checkouthint3"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextuName"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="305dp"
            android:ems="10"
            android:hint="@string/Checkouthint4"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="360dp"
            android:ems="10"
            android:hint="@string/Checkouthint5"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="415dp"
            android:ems="10"
            android:hint="@string/Checkouthint6"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="470dp"
            android:ems="10"
            android:hint="@string/Checkouthint7"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextZIP"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="205dp"
            android:layout_marginTop="470dp"
            android:ems="10"
            android:hint="@string/Checkouthint8"
            android:inputType="textPostalAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextProvince"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="525dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/Checkouthint9"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/payButton01"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="590dp"
            android:text="@string/Checkout2">
        </Button>

    </androidx.cardview.widget.CardView>
</RelativeLayout>