<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logimageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/ImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titlepic" />

    <TextView
        android:id="@+id/LogTextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="143dp"
        android:text="@string/LoginTextView"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logimageView01" />

    <EditText
        android:id="@+id/editTextLog01"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#737070"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogTextView01" />

    <EditText
        android:id="@+id/editTextLog02"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:textColorHint="#737070"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLog01"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/LogButton01"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="45dp"
        android:text="@string/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLog02" />

    <TextView
        android:id="@+id/RegText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/RegTextView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogButton01" />

    <TextView
        android:id="@+id/RegText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="100dp"
        android:text="@string/RegTextView2"
        android:textColor="#009688"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogButton01" />

</androidx.constraintlayout.widget.ConstraintLayout>