<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/regimageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/ImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titlepic" />

    <TextView
        android:id="@+id/RegTextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="143dp"
        android:text="@string/RegisterTextView"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regimageView01" />

    <EditText
        android:id="@+id/editTextReg01"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#737070"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegTextView01" />

    <EditText
        android:id="@+id/editTextReg02"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:textColorHint="#737070"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReg01"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/RegButton01"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="45dp"
        android:text="@string/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReg02" />

    <TextView
        android:id="@+id/LogText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/LogTextView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegButton01" />

    <TextView
        android:id="@+id/LogText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="110dp"
        android:text="@string/LogTextView2"
        android:textColor="#009688"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegButton01" />

</androidx.constraintlayout.widget.ConstraintLayout>