<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView01"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/RestaurantView1"
            android:scaleType="centerCrop">
        </ImageView>

        <TextView
            android:id="@+id/textView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:text="@string/RestaurantView2"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/textView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:text="@string/RestaurantView3"
            android:textSize="12sp">
        </TextView>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
